--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "password": "^0.1.1",
     "request": "^2.74.0",
     "serve-favicon": "~2.3.0",
     "uglify-js": "^2.7.0"
