--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "express-jwt": "^3.4.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.5.8",
